envoy-gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: robodoc-prod
  namespace: robodoc
spec:
  gatewayClassName: robodoc-prod
  listeners:
    - name: http
      protocol: HTTP
      port: 80
