envoy-gateway/10-route-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: robodoc-admin-route
  namespace: robodoc
spec:
  parentRefs:
    - name: robodoc-prod
      namespace: robodoc
  hostnames:
    - admin.robodocbd.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 60s
        backendRequest: 55s
      backendRefs:
        - name: robodoc-backend-production
          port: 80
